HTML fixes plus styling changes

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,6 +1,10 @@
 body {
-  text-align: center;
   font-family: Helvetica;
+  text-align: center;
+}
+  
+main {
+  color: Gray;
 }
 
 header {
@@ -9,7 +13,36 @@ header {
   font-size: 18px;
 }
 
+footer {
+  background-color: dimgray;
+  color: white;
+}
+
+h1, h2, h3 {
+  font-weight: bold;
+}
+
 header h1 {
   font-size: 70px;
-  font-weight: bold;
+}
+
+h2 {
+  font-size: 32px;
+}
+
+h3 {
+  font-size: 23px;
+}
+
+body p {
+  font-size: 14px;
+}
+
+h3.banner {
+  background-image: url("/resources/images/the-flatiron-building.png");
+  color : white;
+}
+
+.copyright {
+  font-size: 11px;
 }
