--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -8,7 +8,7 @@ main {
 }
 
 header {
-  background-image: url("./resources/images/the-flatiron-building.png");
+  background-image: url("/broadway/resources/images/the-flatiron-building.png");
   color: white;
   font-size: 18px;
 }
